--- a/page2.css
+++ b/page2.css
@@ -9,6 +9,104 @@
     display: inline-flex;
     justify-content: space-around;
 }
+nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 8vh;
+    background-color: #55A2D3;
+    font-family: 'Sen', sans-serif;
+}
+.logo{
+    color: #C0DEF1;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 22px;
+}
+.nav-links{
+    display: flex;
+    justify-content: space-around;
+    width: 75%;
+}
+.nav-links li{
+    list-style-type: none;
+}
+.nav-links a{
+    color: #C0DEF1;
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 14px;
+}
+.burger{
+    display: none;
+    cursor: pointer;
+}
+.burger div{
+    width: 25px;
+    height: 3px;
+    background-color: #C0DEF1;
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+
+@media screen and (max-width:1024px){
+    .nav-links{
+        width: 60%;
+    }
+    
+}
+@media screen and (max-width:768px){
+    body{
+        overflow-x: hidden;
+    }
+    .nav-links{
+        position: absolute;
+        right: 8px;
+        height: 92vh;
+        top: 8vh;
+        background-color: #3A9B59;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+
+    }
+    .nav-links li{
+        opacity: 0;
+    }
+    .burger{
+        display: block;
+    }
+}
+
+.nav-active{
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.toggle .line1{
+    transform: rotate(-45deg) translate(-5px,6px);
+
+}
+.toggle .line2{
+    opacity: 0;
+}
+.toggle .line3{
+    transform: rotate(45deg) translate(-5px,-6px);
+}
 
 .image1{
     width: 140vh;
@@ -19,7 +117,42 @@
     margin: 5%;
     border-style: dashed;
     border-color: #55A2D3;
+    width: 200vh;
+    height: 110vh;
     color: #153344;
     background-color: #F4F9FA;
 
+}
+.event1{
+    color: #223866;
+    text-shadow: 3px 3px 0px #6A83B8;
+}
+
+.see-more{
+    list-style: none;
+}
+.list-of-events{
+    display: inline-flex;
+}
+.end-of-page{
+    background-color: #55A2D3;
+    width: 100%;
+}
+.end-of-page, .list{
+    display: inline-flex;
+    justify-content: space-around;
+    color: #C0DEF1;
+}
+.first-list, .second-list{
+    list-style-type: none;
+    
+}
+.list a{
+    text-decoration: none;
+    color: #DBF0EA;
+    
+}
+.dates{
+    list-style-type: none;
+    color: white;
 }
